Fix dropdown menu arrow alignment

--- a/scss/components/_dropdown-menu.scss
+++ b/scss/components/_dropdown-menu.scss
@@ -36,7 +36,7 @@ $dropdownmenu-padding: $global-menu-padding !default;
 
 /// Sets dropdown menu nested margin
 /// @type Number
-$dropdownmenu-nested-margin: 0 !default; 
+$dropdownmenu-nested-margin: 0 !default;
 
 /// Padding for sub-menu items.
 /// @type Number
@@ -51,12 +51,14 @@ $dropdownmenu-border: 1px solid $medium-gray !default;
 // @type Length
 $dropdownmenu-border-width: nth($dropdownmenu-border, 1);
 
-@mixin left-right-arrows {
+@mixin zf-dropdown-left-right-arrows {
   > a::after {
     #{$global-right}: 14px;
   }
 
   &.opens-left > a::after {
+    right: auto;
+    left: 5px;
     @include css-triangle($dropdownmenu-arrow-size, $dropdownmenu-arrow-color, left);
   }
 
@@ -117,7 +119,7 @@ $dropdownmenu-border-width: nth($dropdownmenu-border, 1);
       }
 
       @if $dropdownmenu-arrows {
-        @include left-right-arrows;
+        @include zf-dropdown-left-right-arrows;
       }
     }
   }
@@ -228,7 +230,7 @@ $dropdownmenu-border-width: nth($dropdownmenu-border, 1);
 
     .is-dropdown-submenu-parent {
       @if $dropdownmenu-arrows {
-        @include left-right-arrows;
+        @include zf-dropdown-left-right-arrows;
       }
     }
 
